--- a/src/components/Avatar/Avatar.css
+++ b/src/components/Avatar/Avatar.css
@@ -4,10 +4,10 @@
   height: 50px;
   border-radius: 50%;
   overflow: hidden;
-  object-fit: contain;
 }
 
 .avatar img {
+  object-fit: cover;
   width: 100%;
   height: 100%;
 }
