--- a/src/pages/Project/components/ProjectSummary/ProjectSummary.css
+++ b/src/pages/Project/components/ProjectSummary/ProjectSummary.css
@@ -13,6 +13,8 @@
   margin: 10px 0;
   font-size: 0.9em;
   color: var(--title-color);
+  display: flex;
+  align-items: center;
 }
 
 .project-summary .details {
@@ -31,9 +33,8 @@
   display: flex;
   margin-top: 20px;
 }
-
-.project-summary .assigned-users .avatar {
-  margin-right: 10px;
+.project-summary .avatar {
+  margin: 0px 10px;
   width: 40px;
   height: 40px;
 }
